--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ nav ul li ul li a:hover {
     margin-top: 20px;
     text-align: center;
     line-height: 2em;
+    margin-bottom: 3%;
 }
 
 .about p{
@@ -114,4 +115,17 @@ nav ul li ul li a:hover {
     color: #0b022c;
     line-height: 2.5em;
     text-decoration: underline overline solid;
+}
+
+.footer {
+    position: fixed;
+    background-color: black;
+    color: yellowgreen;
+    text-align: center;
+    font-size: 18px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 30px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
